--- a/sass/classes.scss
+++ b/sass/classes.scss
@@ -790,6 +790,7 @@ h3 {
 	width: 388px;
 	height: 258px;
 	margin-top: 20px;
+	float: left;
 
 	img {
 		height: 258px;
