--- a/sass/tablet.scss
+++ b/sass/tablet.scss
@@ -21,7 +21,51 @@
 	.secondary_bg, 
 	.main_content {
 		.box {
-			min-height: 420px;
+			min-height: auto;
+		}
+	}
+
+	.secondary_bg, 
+	.main_content {
+		.box {
+			width: auto;
+			padding-left: 0;
+			padding-right: 0;
+			margin-left: auto !important;
+			margin-right: auto !important;
+		}
+	}
+
+	.main_banner > div:first-child {
+		margin: 0;
+	}
+
+	.fish_bowl,
+	.birds,
+	.macbook {
+		float: right;
+	}
+
+	.header_bg {
+		.inner-container {
+			min-width: auto;
+		}
+	}
+
+	.banner {
+		padding-bottom: 20px;
+	}
+
+	.ticket_number_status {
+		padding: 10px 0 0 0;
+
+		input,
+		.frg-button {
+			width: 100% !important;
+		}
+
+		.frg-button {
+			margin: 10px 0 0 0;
 		}
 	}
 }
